changed fonts, fixed minor problems with spacing in posts paragraph

--- a/css/style.css
+++ b/css/style.css
@@ -77,4 +77,13 @@ body{
   background-color: white;
 }
 
+.ppost{
+  font-family:Aparajita;
+  font-size: 1.8em;
+}
+
+.hpost{
+  font-family: Vani;
+}
+
 
